# ya-mono

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Dockerfile.ya-agent-platform  Dockerfile.ya-claw  Dockerfile.ya-claw-workspace  Makefile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini
.codex/skills/openspec-apply-change/: SKILL.md
.codex/skills/openspec-archive-change/: SKILL.md
.codex/skills/openspec-explore/: SKILL.md
.codex/skills/openspec-propose/: SKILL.md
.codex/skills/openspec-sync-specs/: SKILL.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: README.md  claw-image.yaml  cli-tests.yml  desktop-release.yml  file-search-benchmarks.yml  main.yml  on-release-main.yml  platform-image.yaml  shell-sandbox.yml  validate-codecov-config.yml  ya-claw-workspace-image.yml  yaacli-desktop-release.yml
apps/ya-claw-web/: README.md  package.json  tsconfig.json  vite.config.ts
apps/ya-claw-web/src/: App.tsx  styles.css  types.ts
apps/ya-claw-web/src/api/: client.test.ts  client.ts  connection.ts  hooks.ts  notificationsStream.test.tsx  notificationsStream.ts  queryKeys.ts  workspaceHooks.test.tsx
apps/ya-claw-web/src/app/: App.integration.test.tsx  AppShell.test.tsx  AppShell.tsx  ConnectionGate.tsx  Providers.tsx  RouteErrorPages.tsx  navigation.test.tsx  navigation.ts  queryClient.ts  router.tsx
apps/ya-claw-web/src/components/: EmptyState.tsx
apps/ya-claw-web/src/lib/: date.test.ts  date.ts  timezone.test.ts  timezone.ts  urlState.test.ts  urlState.ts
apps/ya-claw-web/src/stores/: connectionStore.test.ts  connectionStore.ts  layoutStore.test.ts  layoutStore.ts
apps/ya-claw-web/src/test/: a11y.ts  fixtures.ts  handlers.ts  renderApp.tsx  server.ts  setup.ts  viewport.ts
apps/ya-desktop/: .prettierignore  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/ya-desktop/spec/: 00-overview.md  01-local-sidecar-packaging.md  02-connection-model.md  03-cloud-and-rpc-workspaces.md  04-desktop-api-requirements.md  05-desktop-app-structure.md  06-sandboxed-workspace-provider.md  07-websocket-notifications-and-hitl.md  08-ui-technology-decision.md  09-desktop-relay.md  10-runtime-manager-and-updates.md  11-signing-and-release.md  12-feature-coverage-plan.md  README.md
apps/ya-desktop/spec/computer-use/: 01-product-and-boundary.md  02-native-provider-architecture.md  03-tool-protocol.md  04-permissions-and-safety.md  05-claw-runtime-integration.md  06-desktop-ux.md  07-implementation-plan.md  08-relay-based-computer-use.md  README.md
apps/ya-desktop/src/: styles.css
apps/ya-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/ya-desktop/src-tauri/capabilities/: default.json
apps/ya-desktop/src-tauri/src/: lib.rs  main.rs
apps/ya-desktop/src/advanced/: AdvancedRuntime.tsx  PlaceholderPanel.tsx
apps/ya-desktop/src/app/: App.test.tsx  App.tsx  Shell.tsx  constants.ts  routes.tsx  storage.ts  types.ts  ui.tsx  utils.ts
apps/ya-desktop/src/chat/: ChatWorkSurface.tsx
apps/ya-desktop/src/claw/: client.ts  connection.ts  index.ts  queries.ts  streamEvents.test.ts  streamEvents.ts  types.ts
apps/ya-desktop/src/command-center/: CommandCenter.tsx
apps/ya-desktop/src/connections/: ConnectionsPage.tsx
apps/ya-desktop/src/inbox/: ApprovalsInbox.tsx
apps/ya-desktop/src/runtime/: RuntimeManagerPanel.tsx  index.ts  localClaw.ts  runtimeManager.ts
apps/ya-desktop/src/tasks/: TasksPage.tsx
apps/ya-desktop/src/workspace/: WorkspaceHome.tsx
apps/yaacli-desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/yaacli-desktop/docs/: architecture.md  release.md  security.md
apps/yaacli-desktop/sidecar/: entrypoint.py  yaacli-desktop-sidecar.spec
apps/yaacli-desktop/src/: App.test.tsx  App.tsx  bridge.ts  conversation.test.ts  conversation.ts  desktopStore.test.ts  desktopStore.ts  main.tsx  markdown.tsx  protocol.test.ts  protocol.ts  storage.ts  styles.css
apps/yaacli-desktop/src-tauri/: Cargo.toml  desktop-version.json  tauri.conf.json
apps/yaacli-desktop/src-tauri/binaries/: yaacli-desktop-sidecar-aarch64-apple-darwin
apps/yaacli-desktop/src-tauri/capabilities/: default.json
apps/yaacli-desktop/src-tauri/icons/: icon.icns
apps/yaacli-desktop/src-tauri/src/: credentials.rs  lib.rs  main.rs  sidecar.rs
apps/yaacli-desktop/src/components/: CodeBlock.tsx
benchmarks/file_search/: README.md  base_worker.py  bench_file_search.py
docs/design/: yaacli-composer-statusbar-mockup.html
docs/superpowers/plans/: 2026-05-14-transcript-first-tui-redesign.md  2026-06-09-ppt-agent-mvp.md
examples/: .env.example  deepresearch.py  general.py  ppt_agent_mvp.py
examples/fixtures/ppt_agent/: park_business_proposal.json  work_report_placeholders.json
openspec/changes/yaacli-desktop-mvp/: design.md  proposal.md  tasks.md
scripts/: build-yaacli-desktop-sidecar.sh  generate-yaacli-desktop-version.py  install-desktop-local.py  prepare-desktop-uv-resource.py
skills/agent-builder/: SKILL.md  context.md  environment.md  events.md  message-bus.md  model.md  resumable-resources.md  skills.md  streaming.md  subagent.md  tool-proxy.md  tool-search.md
skills/ya-claw-deploy/: SKILL.md
skills/ya-claw-deploy/references/: agency.md  docker.md  environment.md  operations.md  profiles.md  systemd.md
skills/ya-claw-deploy/references/bridge/: lark.md  operations.md  overview.md
skills/ya-claw-deploy/references/workspace-provider/: docker.md  overview.md  service-docker-docker-shell.md  service-local-docker-shell.md  service-local-local-shell.md
(+170 files in other folders)
