[project]
name = "ya-mono"
version = "0.0.0"
description = "Workspace root for the Yet Another Agents monorepo"
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/ya-agent-environment",
    "packages/ya-environment-relay",
    "packages/ya-agent-sdk",
    "packages/ya-oauth",
    "packages/ya-oauth-provider",
    "packages/yaacli",
    "packages/ya-claw",
    "packages/ya-agent-platform",
]

[tool.uv.sources]
ya-agent-environment = { workspace = true }
ya-environment-relay = { workspace = true }
ya-agent-sdk = { workspace = true }
ya-oauth = { workspace = true }
ya-oauth-provider = { workspace = true }
ya-claw = { workspace = true }
ya-agent-platform = { workspace = true }

[tool.pyright]
include = [
    "packages/ya-agent-environment/ya_agent_environment",
    "packages/ya-environment-relay/ya_environment_relay",
    "packages/ya-agent-sdk/ya_agent_sdk",
    "packages/ya-oauth/ya_oauth",
    "packages/ya-oauth-provider/ya_oauth_provider",
    "packages/yaacli/yaacli",
    "packages/ya-claw/ya_claw",
    "packages/ya-agent-platform/ya_agent_platform",
]
exclude = [
    "packages/ya-agent-environment/tests",
    "packages/ya-environment-relay/tests",
    "packages/ya-agent-sdk/tests",
    "packages/ya-oauth/tests",
    "packages/ya-oauth-provider/tests",
    "packages/yaacli/tests",
    "packages/ya-claw/tests",
    "packages/ya-agent-platform/tests",
    "packages/yaacli/yaacli/skills",
    "examples",
    "skills/examples",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".venv",
]
pythonVersion = "3.11"
extraPaths = [
    "packages/ya-agent-environment",
    "packages/ya-environment-relay",
    "packages/ya-agent-sdk",
    "packages/ya-oauth",
    "packages/ya-oauth-provider",
    "packages/yaacli",
    "packages/ya-claw",
    "packages/ya-agent-platform",
]
typeCheckingMode = "standard"
reportTypedDictNotRequiredAccess = false

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
    "TRY003",
    "TRY300",
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"packages/ya-agent-environment/ya_agent_environment/*" = ["A004"]
"packages/yaacli/yaacli/*" = ["C901", "SIM108"]
"packages/yaacli/tests/*" = ["S101", "S603", "S607", "SIM117", "RUF059", "TRY400", "B904"]
"packages/ya-agent-environment/tests/*" = ["S101", "S108", "S603", "S607", "SIM117", "RUF059", "TRY400", "B904"]
"packages/ya-agent-sdk/tests/*" = ["S101", "S603", "S607", "SIM117", "RUF059", "TRY400", "B904"]
"packages/ya-oauth/tests/*" = ["S101", "S603", "S607", "SIM117", "RUF059", "TRY400", "B904"]
"packages/ya-oauth-provider/tests/*" = ["S101", "S603", "S607", "SIM117", "RUF059", "TRY400", "B904"]
"packages/ya-claw/tests/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904"]
"packages/yaacli/yaacli/skills/**/*.py" = ["E402"]
"skills/examples/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904", "E402"]
"examples/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904", "E402"]

[tool.ruff.format]
preview = true

[tool.deptry]
ignore = ["DEP001", "DEP002"]
per_rule_ignores = { DEP001 = ["anthropic"], DEP002 = ["ya-agent-sdk"], DEP003 = ["anthropic", "yaacli", "botocore"], DEP004 = ["pytest"] }

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = [
    "packages/ya-agent-environment/ya_agent_environment",
    "packages/ya-environment-relay/ya_environment_relay",
    "packages/ya-agent-sdk/ya_agent_sdk",
    "packages/ya-oauth/ya_oauth",
    "packages/ya-oauth-provider/ya_oauth_provider",
    "packages/yaacli/yaacli",
    "packages/ya-claw/ya_claw",
]
omit = [
    "packages/ya-agent-sdk/ya_agent_sdk/agents/*",
    "packages/ya-agent-sdk/ya_agent_sdk/toolsets/core/multimodal/*",
    "packages/ya-agent-sdk/ya_agent_sdk/toolsets/core/*/__init__.py",
]
