[package]
name = "yaacli-desktop"
version = "0.1.0"
description = "macOS desktop interface for YAACLI"
authors = ["wh1isper"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "yaacli_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
